force-app/main/default/objects/FPSA_Resource_Availability__c/FPSA_Resource_Availability__c.object-meta.xml
<CustomObject>
    <label>Resource Availability</label>
    <nameField>
        <displayFormat>RA-{00000}</displayFormat>
        <label>Resource Availability Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Availabilities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>