force-app/main/default/objects/FPSA_Resource_Availability__c/fields/Current_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Current_Quarter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It defines if resource availability is from current quarter.</description>
    <label>Current Quarter?</label>
    <type>Checkbox</type>
</CustomField>