force-app/main/default/objects/FPSA_Resource_Availability__c/fields/Current_Year__c.field-meta.xml
<CustomField>
    <fullName>Current_Year__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current Year?</label>
    <type>Checkbox</type>
</CustomField>