force-app/main/default/objects/FPSA_Resource_Availability__c/fields/FPSA_Actual_Hours__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Actual_Hours__c</fullName>
    <label>Actual Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>