force-app/main/default/objects/FPSA_Resource_Availability__c/fields/FPSA_Available_Hours__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Available_Hours__c</fullName>
    <defaultValue>40</defaultValue>
    <label>Available Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>