force-app/main/default/objects/FPSA_Resource_Availability__c/fields/FPSA_Batch_Status__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Batch_Status__c</fullName>
    <label>Batch Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Updated</fullName>
            </value>
            <value>
                <fullName>Needs Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>