force-app/main/default/objects/FPSA_Resource_Availability__c/fields/FPSA_Billable_Target_Hrs__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Billable_Target_Hrs__c</fullName>
    <formula>(FPSA_Resource__r.FPSA_Utilization_Taget__c *40)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billable Target Hrs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>