force-app/main/default/objects/FPSA_Resource_Availability__c/fields/FPSA_Resource__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Resource__c</fullName>
    <label>Resource</label>
    <referenceTo>MPM4_BASE__Milestone1_Resource__c</referenceTo>
    <relationshipLabel>Resource Availabilities</relationshipLabel>
    <relationshipName>Resource_Availabilities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>