force-app/main/default/objects/FPSA_Resource_Availability__c/fields/FPSA_Week_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Week_Start_Date__c</fullName>
    <label>Week Start Date</label>
    <type>Date</type>
</CustomField>