force-app/main/default/objects/FPSA_Resource_Availability__c/fields/Total_Actual_Billable_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Actual_Billable_Hours__c</fullName>
    <description>Total Hours that were Actually Billed</description>
    <inlineHelpText>Total Hours that were Actually Billed</inlineHelpText>
    <label>Total Actual Billable Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>