force-app/main/default/objects/FPSA_Resource_Availability__c/fields/Total_Actual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Actual_Revenue__c</fullName>
    <description>Total Actual Revenue Based on time Approved</description>
    <inlineHelpText>Total Actual Revenue Based on time Approved</inlineHelpText>
    <label>Total Actual Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>