force-app/main/default/objects/FPSA_Resource_Availability__c/fields/Total_Billable_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Billable_Hours__c</fullName>
    <description>Total Planned Hours that are marked as Billable</description>
    <inlineHelpText>Total Planned Hours that are marked as Billable</inlineHelpText>
    <label>Total Planned Billable Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>