force-app/main/default/objects/FPSA_Resource_Availability__c/fields/Total_Non_Billable_Actual_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Non_Billable_Actual_Hours__c</fullName>
    <description>Total Hours minus total Billable Hours</description>
    <formula>FPSA_Actual_Hours__c - Total_Actual_Billable_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Hours minus total Billable Hours</inlineHelpText>
    <label>Total Non-Billable Actual Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>