force-app/main/default/objects/FPSA_Resource_Availability__c/fields/Total_Non_Billable_Planned_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Non_Billable_Planned_Hours__c</fullName>
    <description>Total Hrs minus Billable Hours</description>
    <formula>FPSA_Planned_Hours__c -  Total_Billable_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Hrs minus Billable Hours</inlineHelpText>
    <label>Total Non-Billable Planned Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>