force-app/main/default/objects/FPSA_Resource_Availability__c/fields/Total_Planned_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Planned_Revenue__c</fullName>
    <description>Total Revenue based on planned billable work</description>
    <inlineHelpText>Total Revenue based on planned billable work</inlineHelpText>
    <label>Total Planned Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>